<resources>
    <string name="app_name">Проба</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Пароль:</string>
    <string name="button_login">Войти</string>
    <string name="greeting_login">Здравствуйте, admin@admin.ru!</string>
    <string name="error_message">Произошла ошибка авторизации</string>
    <string name="hint_email">Введите Email</string>
    <string name="hint_password">Введите пароль</string>
    <string name="button_back">Назад</string>
    <string name="authorization">Авторизация</string>
    <string name="say_my_name_hint">Say my name</string>
    <string name="next_button">-></string>
    <string name="wrong_name_message">Меня зовут не %s</string>
</resources>