<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <!-- Поле для ввода email -->
    <EditText
        android:id="@+id/et_inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_labelEmail"
        android:hint="@string/hint_email"

        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- Метка для пароля -->
    <TextView
        android:id="@+id/tv_labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textSize="16sp"
        android:layout_below="@id/et_inputEmail"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"/>

    <!-- Поле для ввода пароля -->
    <EditText
        android:id="@+id/et_inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_labelPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- Кнопка "Войти" -->
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_inputPassword"
        android:text="@string/button_login"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>